--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,7 +7,7 @@
         </label>
     
     <!--Ajout d'un Formgroupe credentials-->   
-    <div formControlName="credentials"> 
+    <div formGroupName="credentials"> 
         <label>
             Email :
             <input type="email" formControlName="email">
